--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -56,13 +56,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentManipulationTests.cs" />
     <Compile Include="Components\ComponentB.cs" />
     <Compile Include="Components\ComponentA.cs" />
+    <Compile Include="Components\ComponentCreatesAnotherComponent.cs" />
+    <Compile Include="Templates\ComponentCreatesAnotherComponentTemplate.cs" />
     <Compile Include="Templates\TestEntityTemplate.cs" />
     <Compile Include="Templates\TwoComponentsEntityTemplate.cs" />
     <Compile Include="SetupEcsServiceFactory.cs" />
     <Compile Include="TransformManipulationTests.cs" />
-    <Compile Include="WorkflowUnitTest.cs" />
+    <Compile Include="WorkflowTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
